logs/Slang/chapter-6/6.16.6--string_compare.sv.log
name: string_compare_fn
description: string.compare()  tests
should_fail: 0
tags: 6.16.6
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.6--string_compare.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.6--string_compare.sv:10:11: error: invalid member access for type 'string'
	int c = a.compare(b);
	        ~^~~~~~~~
